(in progress) starts collapsed - but still need to make sure it displays correctly for mobile

--- a/_sass/modifications.scss
+++ b/_sass/modifications.scss
@@ -153,6 +153,7 @@
 }
 
 #main, #footer {
+  margin-left: 100px;
   transition: width 0.5s;
   transition: margin-left 0.5s;
 }
